src/tests/Loader/classloader/generics/Instantiation/Negative/abstract09.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <!-- Needed for CrossGenTest -->
    <RequiresProcessIsolation>true</RequiresProcessIsolation>
    <CLRTestPriority>1</CLRTestPriority>
    <CrossGenTest>false</CrossGenTest>
  </PropertyGroup>
  <ItemGroup>
    <Compile Include="abstract09.il" />
  </ItemGroup>
</Project>
